--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
         </section>
 
         </main>
-        <footer>
-            <div class="footer-logo">
+        <footer class="footerContainer">
+            <section class="footer">
+                <div class="footer-logo">
                 <img src="assets/logo.svg" alt="suitelogo">
             </div>
             <div id="copyright">Copyright - Suite
@@ -73,7 +74,7 @@
                 <li class="facebook"><img src="assets/icon-facebook.svg" alt="facebook-icon"></li>
                 <li class="twitter"><img src="assets/icon-twitter.svg" alt="twitter-icon"></li>
                 <li class="instagram"><img src="assets/icon-instagram.svg" alt=""></li>
-            </ul>
+            </ul></section>
         </footer>
 </body>
 </html>
