update on queries

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <img src="assets/pattern-curved-line-2.svg" alt="">
                     </div>
                     <div class="message">
-                        <div class="top-comment"><span class="top-comment1">it just</span>  
+                        <div id="titlecomment"class="top-comment"><span class="top-comment1">it just</span>  
                             <strong class="top-comment2">works</strong>
                         </div>
                         <div class="middle-comment"><p>"I really like how it is an all-in-one 
